--- a/2025/Makefile
+++ b/2025/Makefile
@@ -6,7 +6,7 @@ run-all:
 	python train_models.py
 	python calibrate.py
 	python get_win_percentages.py
-	python play_bracket.py brackets/bracket_2024.json model_results/results_probs_2024.json
+	python play_bracket.py
 
 clean:
 	rm -rf datasets
