ready to get data on remote

--- a/2025/Makefile
+++ b/2025/Makefile
@@ -1,12 +1,15 @@
 grab-data:
 	python grab_raw_data.py
 
-run-all:
+train-models:
 	python featurize_data.py
 	python train_models.py
 	python calibrate.py
 	python get_win_percentages.py
 	python play_bracket.py
+
+run-all: clean grab-data train-models
+	echo "All Done"
 
 clean:
 	rm -rf datasets
