--- a/2025/.env_example
+++ b/2025/.env_example
@@ -1,8 +1,8 @@
-PHPSESSID=""
-KENPOMUSER=""
-KENPOMID=""
-STRIPE_MID=""
-STRIPE_SID=""
-KENPOMTRY=""
+PHPSESSID=
+KENPOMUSER=
+KENPOMID=
+STRIPE_MID=
+STRIPE_SID=
+KENPOMTRY=
 
 NUMBER_OF_MODELS=2
